--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Test</title>
 </head>
 <body>
-    <p>I am learning JavaScript</p>
+    <p>I am learning JavaScript by Apna College YouTube channel</p>
 </body>
 </html>
